[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sound/go-go-go.mp3" type="AudioStream" id=1]
[ext_resource path="res://assets/sound/alarm-clock.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/sound/beep.mp3" type="AudioStream" id=3]
[ext_resource path="res://src/SoundConductor.gd" type="Script" id=4]
[ext_resource path="res://assets/sound/spaceship-alarm.mp3" type="AudioStream" id=5]

[node name="SoundConductor" type="Node"]
script = ExtResource( 4 )

[node name="GoGoGo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="AlarmClock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SpaceshipAlarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
